<resources>
    <string name="app_name">Android-Kotlin-Layouts-Views01</string>
    <string name="str01">I changed this text</string>
    <string name="str02">Change Text</string>
    <string name="str03">Clear Text</string>
    <string name="str04">Tip anything ...</string>
    <string name="str05">Block text exchange</string>
    <string name="str06">Blocked text exchange</string>
    <string name="str07">Free text exchange</string>
    <string name="str08">Text exchange released</string>
    <string name="str09">No one has been checked yet</string>
</resources>
