<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.paes.josias.android_kotlin_layouts_views04.MainActivity">

    <TextView
        android:id="@+id/tvText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="Hello World!"
        />

    <EditText
        android:id="@+id/etText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str04"/>

    <RadioGroup
        android:id="@+id/rgGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rbFree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str07"
            android:onClick="rbClick"
            />
        <RadioButton
            android:id="@+id/rbBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str05"
            android:onClick="rbClick"
            />
    </RadioGroup>

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str02"
        android:onClick="changeText"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str03"
        android:onClick="clearText"
        />

</LinearLayout>
